--- a/pft/Makefile
+++ b/pft/Makefile
@@ -1,12 +1,12 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    printftester2000 Makefile                          :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: gfielder <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/02/28 21:19:45 by gfielder          #+#    #+#              #
-#    Updated: 2023/11/03 16:35:21 by apyykone         ###   ########.fr        #
+#    Updated: 2019/07/08 22:40:24 by gfielder         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
